# netbox-change2log

./: README.md  pyproject.toml  setup.py
netbox_change2log/: __init__.py  signals.py
