# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-change2log"
version = "0.1.0"
authors = [
    { name = "TMT GmbH & Co. KG" },
]
description = "Sends the changelog to a logger"
readme = "README.md"

classifiers=[]

requires-python = ">=3.10.0"

[tool.setuptools.packages.find]
where = ["."]